--- a/Project1/Code/pom.xml
+++ b/Project1/Code/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>pl.pragmatists</groupId>
+            <artifactId>JUnitParams</artifactId>
+            <version>1.1.0</version>
+        </dependency>
 
     </dependencies>
 
